--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://www.github.com/xyezir/leafjs"
+        "url": "https://github.com/leafjs/leaf"
     },
     "keywords": [
         "leafjs",
@@ -27,82 +27,71 @@
     "license": "MIT",
     "dependencies": {
         "any-promise": "^1.3.0",
-        "babel-preset-es2015": "^6.14.0",
-        "babel-preset-react": "^6.11.1",
-        "babel-register": "^6.14.0",
         "basic-auth": "^1.0.4",
-        "bluebird": "^3.4.1",
-        "bluebird-co": "^2.1.2",
+        "bluebird": "^3.4.6",
+        "bluebird-co": "^2.2.0",
         "closest-package": "^1.0.0",
         "co-body": "^4.2.0",
-        "co-dust": "^0.1.0",
         "co-multipart": "^2.0.0",
         "commander": "^2.9.0",
         "debug": "^2.2.0",
         "delegates": "^1.0.0",
         "depd": "^1.1.0",
-        "dustjs-helpers": "^1.7.3",
-        "dustjs-linkedin": "^2.7.2",
-        "eventemitter2": "^1.0.5",
+        "eventemitter2": "^2.1.3",
         "extend": "^3.0.0",
-        "glob": "^7.0.5",
-        "jsonwebtoken": "^7.1.6",
+        "glob": "^7.1.1",
+        "jsonwebtoken": "^7.1.9",
         "keygrip": "^1.0.1",
         "koa-body-parsers": "^3.0.0",
         "koa-cash": "^2.0.0",
-        "koa-compose": "^2.4.0",
+        "koa-compose": "^2.5.1",
         "koa-compress": "^1.0.9",
         "koa-csrf": "^2.5.0",
         "koa-error": "^2.1.0",
-        "koa-etag": "^2.1.1",
         "koa-file-server": "^2.3.1",
+        "koa-generic-session": "^1.11.3",
         "koa-json": "^1.1.3",
         "koa-logger": "^1.3.0",
         "koa-override-method": "^1.0.0",
         "koa-passport": "^1.3.1",
         "koa-qs": "^2.0.0",
-        "koa-react-view": "^3.0.0",
+        "koa-redis": "^2.1.2",
         "koa-response-time": "^1.0.2",
         "koa-safe-jsonp": "^0.3.1",
         "koa-send": "^3.2.0",
-        "koa-session": "^3.3.1",
         "koa-trace": "^1.0.0",
         "koa-trie-router": "^1.1.0",
-        "leaf-koa": "^1.0.1",
-        "leaf-mdns": "^1.0.1",
-        "lodash": "^4.14.0",
+        "leaf-dust": "0.0.4",
+        "leaf-koa": "^1.0.3",
+        "leaf-mdns": "^1.0.2",
+        "leaf-react": "0.0.1",
         "merge-descriptors": "^1.0.1",
         "methods": "^1.1.2",
         "mkdirp": "^0.5.1",
         "mock-req": "^0.2.0",
-        "mock-res": "^0.3.0",
-        "moment": "^2.14.1",
-        "ms": "^0.7.1",
+        "mock-res": "^0.3.3",
+        "moment": "^2.15.2",
+        "ms": "^0.7.2",
         "mz": "^2.4.0",
-        "node-forge": "^0.6.41",
-        "node-jose": "^0.9.0",
-        "pmx": "^0.6.2",
-        "qs": "^6.2.1",
+        "node-forge": "^0.6.45",
+        "node-jose": "^0.9.1",
+        "pmx": "^0.6.8",
+        "qs": "^6.3.0",
         "read-yaml": "^1.0.0",
         "semver": "^5.3.0",
-        "socket.io": "^1.4.8",
-        "socket.io-client": "^1.4.8",
-        "spdy": "^3.3.4",
+        "socket.io": "^1.5.1",
+        "socket.io-client": "^1.5.1",
+        "spdy": "^3.4.4",
         "v8-profiler": "^5.6.5",
-        "yargs": "^4.8.1",
-        "yeoman-environment": "^1.6.3",
-        "yeoman-generator": "^0.24.1"
+        "yargs": "^6.3.0"
     },
     "devDependencies": {
-        "babel-cli": "^6.11.4",
-        "babel-core": "^6.11.4",
-        "babel-istanbul": "^0.11.0",
         "chai": "^3.5.0",
         "chai-http": "^3.0.0",
         "del": "^2.2.2",
         "gulp": "^3.9.1",
         "gulp-run": "^1.7.1",
-        "istanbul": "^0.4.4",
+        "istanbul": "^0.4.5",
         "jaguarjs-jsdoc": "^1.0.0",
         "jsdoc": "^3.4.0",
         "mocha": "^2.5.3"
